storj/k8s/storagenode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storj-dashboard
  namespace: storj
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "X-Robots-Tag: noindex, nofollow";
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - storj-dash.datafortress.cloud
    - storj.datafortress.cloud
    secretName: tls-secret
  rules:
  - host: 
    - "storj-dash.datafortress.cloud"
    http:
      paths:
        - path: "/" # wildcard for now
          pathType: Prefix
          backend:
            service:
              name: storagenode
              port:
                number: 14002
  - host: 
    - "storj.datafortress.cloud"
    http:
      paths:
        - path: "/" # wildcard for now
          pathType: Prefix
          backend:
            service:
              name: storagenode-nodeport
              port:
                number: 28967
